# Mineclone

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
apps/: CMakeLists.txt
apps/mineclone/: CMakeLists.txt  main.cpp
assets/mineclone/shaders/gl/: chunk.frag  chunk.vert
assets/shaders/: chunk.frag.glsl  chunk.vert.glsl  chunk_packed_64x64x64.frag.glsl  chunk_packed_64x64x64_xy.vert.glsl  chunk_packed_64x64x64_yz.vert.glsl  chunk_packed_64x64x64_zx.vert.glsl  chunk_packed_wireframe.frag.glsl  chunk_packed_wireframe.vert.glsl
assets/shaders/compute/: perlin2D.glsl
assets/textures/: README.md
docs/: 00-outline.md  01-system-design.md  Guidelines.md
engine/: CMakeLists.txt
engine/include/: aabb.h  application.h  blocks.h  config.h  engine.h  entrypoint.h  events.h  files.h  frustum.h  gui.h  input.h  logger.h  mathematics.h  player.h  profiler.h  render.h  std_ext.h  transform.h  window.h  world.h
engine/include/format/: format.h  frustum.h  glm.h  mathematics.h
engine/include/gui/: aabb.h  frustum.h  gui.h  mathematics.h  render.h  transform.h
engine/include/render/: buffer.h  chunks.h  events.h  gui.h  noise.h  renderer.h  shader.h  texture.h  texture_atlas.h
engine/include/utils/: array.h  hash.h  memory.h  optional.h  string.h  thread.h  tuple.h  type.h  utils.h
engine/src/: aabb.cpp  application.cpp  blocks.cpp  files.cpp  frustum.cpp  logger.cpp  mathematics.cpp  profiler.cpp  render.cpp  transform.cpp  window.cpp  world.cpp
include/: application.h  blocks.fmt.h  blocks.h  cvar.h  events.h  files.h  fmt_glm.h  frustum.h  glm.fmt.h  gui.h  input.h  io.h  log.h  logger.h  mathematics.h  mineclone.h  player.h  profiler.h  render.fmt.h  render.h  std_ext.h  transform.h  types.h  window.h  world.h
include/files/: assets.h
include/format/: aabb.h  blocks.h  input.h  player.h  render.h  transform.h  window.h
include/gui/: blocks.h  frustum.h
include/mineclonelib/: application.h  cvar.h  entrypoint.h  log.h  mineclone.h  misc.h  transform.h
include/mineclonelib/io/: assets.h  input.h  keys.h  window.h
include/mineclonelib/render/: context.h  gui.h  render.h  thread.h  world.h
include/mineclonelib/render/gl/: context.h  gui.h  utils.h  world.h
include/mineclonelib/render/vk/: context.h  gui.h  world.h
include/mineclonelib/world/: blocks.h  chunk.h  world.h
include/render/: buffer.h  chunk.h  context.h  imgui.h  shader.h  world.h
include/utils/: array.h  string.h  time.h
include/world/: chunk.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: CMakeLists.txt  application.cpp  blocks.cpp  cvar.cpp  files.cpp  frustum.cpp  gui.cpp  input.cpp  io.cpp  log.cpp  logger.cpp  main.cpp  mathematics.cpp  mineclone.cpp  player.cpp  profiler.cpp  render.cpp  transform.cpp  utils.cpp  window.cpp  world.cpp
src/files/: assets.cpp
src/io/: input.cpp  window.cpp
src/render/: buffer.cpp  chunk.cpp  context.cpp  gui.cpp  imgui.cpp  render.cpp  shader.cpp  thread.cpp  world.cpp
src/render/gl/: context.cpp  gui.cpp  utils.cpp  world.cpp
src/render/vk/: context.cpp  gui.cpp  world.cpp
src/world/: blocks.cpp  chunk.cpp  world.cpp
tests/: CMakeLists.txt  context.cpp  cvar.cpp  input.cpp  window.cpp
tests/ArrayTest/: CMakeLists.txt
tests/ArrayTest/src/: main.cpp
tests/UtilsDemo/: CMakeLists.txt
tests/UtilsDemo/src/: main.cpp
